[package]
name = "transaction-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde","v4"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37.0", features = ["bundled", "uuid", "chrono"] }
chrono = {version = "0.4.42", features = ["serde"]}
mysql = {version = "25.0.1", features = ["chrono"]}
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.19.0"
